--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 <section class="profile">
-<img src="images/ava.jpg">
+<img src="a9e1d1e4-4787-4058-a0c2-4eaa2982e614.jpg">
 <h1>Мария Иванова</h1>
 <h2>Специалист издательского дела</h2>
 <p>Я закончила МКИК или ИГУМО, живу и работаю в Москве.</p>
