--- a/2.html
+++ b/2.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 <section class="profile"> 
-<img src="a9e1d1e4-4787-4058-a0c2-4eaa2982e614.jpg">
+<img src="photo_2024-06-11_16-10-03">
 <h1> Черноус Мария </h1>
 <h2>Подкастер, писатель, издатель</h2>
 <p>Закончила Международный Колледж Искусств и Коммуникаций. Веду подкаст "В книге всё было по-другому", являюсь автором книги "Улица Светлый тупик".</p>
